# aegisvm

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  Taskfile.yml  aegis-vmm-worker  entitlements.plist  go.mod  go.sum  install.sh
base/: Makefile
debian/: Makefile
docs/: AGENT_CONVENTIONS.md  AGENT_KIT.md  CLI.md  GUEST_API.md  KITS.md  QUICKSTART.md  ROUTER.md  SECRETS.md  TETHER.md  TROUBLESHOOTING.md  WORKSPACES.md  cloud-hypervisor-backend.md  vsock-lifecycle-spec.md
homebrew/: aegis.rb  aegisvm-desktop.rb  aegisvm.rb
icons/: appicon-glow.icns  appicon-noglow.icns  render-glow.html  render.html
kits/: agent.json  openclaw.json
sdk/python/: pyproject.toml
sdk/python/aegis/: __init__.py  log.py  secrets.py  workspace.py
sdk/python/tests/: test_log.py  test_secrets.py  test_workspace.py
specs/: AEGIS_AGENT_KIT_v0_1.md  AEGIS_DESKTOP_APP_ROADMAP.md  AEGIS_KIT_PACKAGING.md  AEGIS_PLATFORM_SPEC.md  AEGIS_UI_SPEC.md  AEGIS_v3_PLATFORM_SPEC.md  AGENT_CRON_SPEC.md  AGENT_KIT_TOOLS_ROADMAP.md  AGENT_MEMORY_SPEC.md  CORE_GUEST_AGENT.md  FAMIGLIA_KIT_SPEC.md  GATEWAY_CHANNEL_ABSTRACTION.md  GUEST_ORCHESTRATION_API.md  GVPROXY_NETWORKING.md  HOST_AGENT_TETHER.md  HOST_LLM_PROXY.md  IDLE_POWER_STATES.md  IMPLEMENTATION_KICKOFF.md  IMPLEMENTATION_NOTES.md  INTEGRATED_MODEL_REGISTRY.md  KIT_BOUNDARY_SPEC.md  OPENCLAW_CONFIG_MAP.md  OPENCLAW_KIT_SPEC.md  OPENCLAW_KIT_SPEC_v0.md  OPENCLAW_MVP_SPEC.md  OPENCLAW_TETHER_KIT_SPEC.md  PACKAGING_AND_DELIVERY.md  README.md  RUNTIME_EXPOSE.md  TETHER_IMAGE_SUPPORT.md  TETHER_MESSAGING_GAPS.md  openclaw-friction-log.md  (+3 more)
(+177 files in other folders)
