[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aegis-sdk"
version = "0.1.0"
description = "Thin SDK for agents running inside Aegis microVMs"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Aegis" },
]

[project.optional-dependencies]
test = ["pytest"]
